[package]
name = "stm32f4-experimentation"
version = "0.1.0"
authors = ["Matt Mullins <mmullins@mmlx.us>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
panic-itm = "0.4.0"
stm32f7xx-hal = { version = "0.2", features = [ "stm32f767", "rt" ] }
usb-device = "0.2"
usbd-serial = "0.1"

[profile.release]
opt-level = "z"
debug = true
